[gd_scene load_steps=5 format=3 uid="uid://xfrx2n7uexv4"]

[ext_resource type="Script" path="res://Inventory/inv_slot_passive.gd" id="1_v836j"]
[ext_resource type="Texture2D" uid="uid://cywq7l6ejij37" path="res://Inventory/AssetsInv/invslot.png" id="2_wxdmu"]
[ext_resource type="FontFile" uid="uid://coeadkm2hhjqc" path="res://Inventory/Comfortaa-VariableFont_wght.ttf" id="3_3t57i"]

[sub_resource type="FontVariation" id="FontVariation_8qgp7"]
base_font = ExtResource("3_3t57i")

[node name="InvSlot" type="Control"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -75.0
offset_right = 60.0
offset_bottom = -15.0
grow_vertical = 0
script = ExtResource("1_v836j")

[node name="InventorySlot" type="TextureRect" parent="." groups=["inv_slots"]]
layout_mode = 0
scale = Vector2(0.24, 0.24)
texture = ExtResource("2_wxdmu")

[node name="AmountDisplay" type="Label" parent="."]
layout_mode = 0
offset_top = 63.0
offset_right = 12.0
offset_bottom = 87.0
theme_override_fonts/font = SubResource("FontVariation_8qgp7")
theme_override_font_sizes/font_size = 18
text = "0"

[node name="ItemSprite" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 60.0
offset_bottom = 60.0
expand_mode = 1

[connection signal="gui_input" from="ItemSprite" to="." method="_on_item_sprite_gui_input"]
